Development
	Add tvfps option (needed for some webcams)
		my pwc webcam works best with --tvdriver=v4l --tvfps=30
	Add support for tv:// type devices
	Update playlist viewer to show metadata (if present) from the files.
	Add open location to the file menu
	Improved RealPlayer emulation, the BBC News site works better now
	Fix remote volume setting, when running in GTK >= 2.12 mode
0.5.3
	Fix bug in set_media_info calls, where wrong variable being sent
	Polish and Korean Translations
	Acclerator I (show/hide info window)
	Accelerators Ctrl-P (Preferences) and Ctrl-L (Playlist)
	Hide Playlist when fullscreen is selected
	Change Properties to Preferences
	Removal of dependancies on libgnome and libgnomeui
	Key j selects visible subtitle
	Key v toggles subtitle visibility
	When using dvdnav:// prev and next should do chapter seeks
	Added pt_BR translation
	On file open if file does not exi
	When SetURL is passed in, set the media file in title bar to the URL
	Fix mplayer not being shutdown on F8
	When we are on GTK 2.12, use the Volume Button widget
	Work around bug in g_stat reporting a mms url as a directory.
	Add pulse to the list of possible AO devices
	For dvdnav:// urls don't load it as a playlist
	Add fallback support for playlist media (playlist within playlist)
0.5.2
	Minor GUI cleanup
	Remove extra carrage returns from metadata
	Fix problem with playlist position after double clicking
	Fix some problems identified by Starcrasher
	Updated French translation
	Try to handle UTF8 title and artist names better
	When running in RP emulation, update the media label over the bus
	Fix problem with media info being shown on BBC News site when it should not
	Fix dragging and dropping of a playlist that is not parsable (ASX for example)
	Fix for BBC Radio
	Show the playlist filename in the first column header of the playlist view
	Don't show the song_title widget, but show the media label widget
	Show the media media data when video is no present